src/grammar/.antlr/TyCParser.py
# Generated from c:/Users/Admin/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
                     "'||'", "'!'", "'++'", "'--'", "'='", "'.'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT_KW", "FOR", "IF", "INT_KW", 
                      "RETURN", "STRING_KW", "STRUCT", "SWITCH", "VOID", 
                      "WHILE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EQ", 
                      "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", "NOT", 
                      "INC", "DEC", "ASSIGN", "DOT", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "SEMI", "COMMA", "COLON", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "INT", "FLOAT", "STRING", "ID", "WS", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_structdecl = 1
    RULE_members = 2
    RULE_type = 3
    RULE_funcdecl = 4
    RULE_returntype = 5
    RULE_param = 6
    RULE_paramtype = 7
    RULE_listparam = 8
    RULE_listpr = 9
    RULE_stmt = 10
    RULE_assignstmt = 11
    RULE_condstmt = 12
    RULE_whilestmt = 13
    RULE_forstmt = 14
    RULE_init = 15
    RULE_condition = 16
    RULE_update = 17
    RULE_switchstmt = 18
    RULE_case = 19
    RULE_returnstmt = 20
    RULE_exprstmt = 21
    RULE_blockstmt = 22
    RULE_breakstmt = 23
    RULE_continuestmt = 24
    RULE_vardecl = 25
    RULE_expr = 26
    RULE_logicalOR = 27
    RULE_logicalAND = 28
    RULE_equality = 29
    RULE_relational = 30
    RULE_additive = 31
    RULE_multiplicative = 32
    RULE_unary = 33
    RULE_postfix = 34
    RULE_postfixOp = 35
    RULE_primary = 36
    RULE_arglist = 37

    ruleNames =  [ "program", "structdecl", "members", "type", "funcdecl", 
                   "returntype", "param", "paramtype", "listparam", "listpr", 
                   "stmt", "assignstmt", "condstmt", "whilestmt", "forstmt", 
                   "init", "condition", "update", "switchstmt", "case", 
                   "returnstmt", "exprstmt", "blockstmt", "breakstmt", "continuestmt", 
                   "vardecl", "expr", "logicalOR", "logicalAND", "equality", 
                   "relational", "additive", "multiplicative", "unary", 
                   "postfix", "postfixOp", "primary", "arglist" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT_KW=7
    FOR=8
    IF=9
    INT_KW=10
    RETURN=11
    STRING_KW=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    PLUS=17
    MINUS=18
    MUL=19
    DIV=20
    MOD=21
    EQ=22
    NEQ=23
    LT=24
    GT=25
    LE=26
    GE=27
    AND=28
    OR=29
    NOT=30
    INC=31
    DEC=32
    ASSIGN=33
    DOT=34
    LBRACE=35
    RBRACE=36
    LPAREN=37
    RPAREN=38
    SEMI=39
    COMMA=40
    COLON=41
    BLOCK_COMMENT=42
    LINE_COMMENT=43
    INT=44
    FLOAT=45
    STRING=46
    ID=47
    WS=48
    ERROR_CHAR=49
    ILLEGAL_ESCAPE=50
    UNCLOSE_STRING=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def structdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructdeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructdeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.FuncdeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 78
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 76
                    self.structdecl()
                    pass
                elif token in [7, 10, 12, 15, 47]:
                    self.state = 77
                    self.funcdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488401536) != 0)):
                    break

            self.state = 82
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def members(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.MembersContext)
            else:
                return self.getTypedRuleContext(TyCParser.MembersContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_structdecl




    def structdecl(self):

        localctx = TyCParser.StructdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(TyCParser.STRUCT)
            self.state = 85
            self.match(TyCParser.ID)
            self.state = 86
            self.match(TyCParser.LBRACE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488360576) != 0):
                self.state = 87
                self.members()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(TyCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_members




    def members(self):

        localctx = TyCParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_members)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.type_()
            self.state = 96
            self.match(TyCParser.ID)
            self.state = 97
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_KW(self):
            return self.getToken(TyCParser.INT_KW, 0)

        def FLOAT_KW(self):
            return self.getToken(TyCParser.FLOAT_KW, 0)

        def STRING_KW(self):
            return self.getToken(TyCParser.STRING_KW, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_type




    def type_(self):

        localctx = TyCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488360576) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returntype(self):
            return self.getTypedRuleContext(TyCParser.ReturntypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def listparam(self):
            return self.getTypedRuleContext(TyCParser.ListparamContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StmtContext)
            else:
                return self.getTypedRuleContext(TyCParser.StmtContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_funcdecl




    def funcdecl(self):

        localctx = TyCParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.returntype()
            self.state = 102
            self.match(TyCParser.ID)
            self.state = 103
            self.match(TyCParser.LPAREN)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488360576) != 0):
                self.state = 104
                self.listparam()


            self.state = 107
            self.match(TyCParser.RPAREN)
            self.state = 108
            self.match(TyCParser.LBRACE)
            self.state = 110 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 109
                self.stmt()
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 264062106034068) != 0)):
                    break

            self.state = 114
            self.match(TyCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturntypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_returntype




    def returntype(self):

        localctx = TyCParser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returntype)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.type_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(TyCParser.VOID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramtype(self):
            return self.getTypedRuleContext(TyCParser.ParamtypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.paramtype()
            self.state = 122
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_KW(self):
            return self.getToken(TyCParser.INT_KW, 0)

        def FLOAT_KW(self):
            return self.getToken(TyCParser.FLOAT_KW, 0)

        def STRING_KW(self):
            return self.getToken(TyCParser.STRING_KW, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_paramtype




    def paramtype(self):

        localctx = TyCParser.ParamtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488360576) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListparamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(TyCParser.ParamContext,0)


        def listpr(self):
            return self.getTypedRuleContext(TyCParser.ListprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_listparam




    def listparam(self):

        localctx = TyCParser.ListparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listparam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.param()
            self.state = 127
            self.listpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(TyCParser.ParamContext,0)


        def listpr(self):
            return self.getTypedRuleContext(TyCParser.ListprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_listpr




    def listpr(self):

        localctx = TyCParser.ListprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listpr)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(TyCParser.COMMA)
                self.state = 130
                self.param()
                self.state = 131
                self.listpr()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(TyCParser.VardeclContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def assignstmt(self):
            return self.getTypedRuleContext(TyCParser.AssignstmtContext,0)


        def condstmt(self):
            return self.getTypedRuleContext(TyCParser.CondstmtContext,0)


        def switchstmt(self):
            return self.getTypedRuleContext(TyCParser.SwitchstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(TyCParser.WhilestmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(TyCParser.ForstmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(TyCParser.ReturnstmtContext,0)


        def exprstmt(self):
            return self.getTypedRuleContext(TyCParser.ExprstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(TyCParser.BlockstmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(TyCParser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(TyCParser.ContinuestmtContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_stmt




    def stmt(self):

        localctx = TyCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.vardecl()
                self.state = 137
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.assignstmt()
                self.state = 140
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.condstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.switchstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 144
                self.whilestmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 145
                self.forstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 146
                self.returnstmt()
                self.state = 147
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.exprstmt()
                self.state = 150
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 152
                self.blockstmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 153
                self.breakstmt()
                self.state = 154
                self.match(TyCParser.SEMI)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 156
                self.continuestmt()
                self.state = 157
                self.match(TyCParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def DOT(self):
            return self.getToken(TyCParser.DOT, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_assignstmt




    def assignstmt(self):

        localctx = TyCParser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignstmt)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(TyCParser.ID)
                self.state = 162
                self.match(TyCParser.ASSIGN)
                self.state = 163
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(TyCParser.ID)
                self.state = 165
                self.match(TyCParser.DOT)
                self.state = 166
                self.match(TyCParser.ID)
                self.state = 167
                self.match(TyCParser.ASSIGN)
                self.state = 168
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TyCParser.IF, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StmtContext)
            else:
                return self.getTypedRuleContext(TyCParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(TyCParser.ELSE, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_condstmt




    def condstmt(self):

        localctx = TyCParser.CondstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(TyCParser.IF)
            self.state = 172
            self.match(TyCParser.LPAREN)
            self.state = 173
            self.expr()
            self.state = 174
            self.match(TyCParser.RPAREN)
            self.state = 175
            self.stmt()
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 176
                self.match(TyCParser.ELSE)
                self.state = 177
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(TyCParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def stmt(self):
            return self.getTypedRuleContext(TyCParser.StmtContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_whilestmt




    def whilestmt(self):

        localctx = TyCParser.WhilestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whilestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(TyCParser.WHILE)
            self.state = 181
            self.match(TyCParser.LPAREN)
            self.state = 182
            self.expr()
            self.state = 183
            self.match(TyCParser.RPAREN)
            self.state = 184
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(TyCParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.SEMI)
            else:
                return self.getToken(TyCParser.SEMI, i)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def stmt(self):
            return self.getTypedRuleContext(TyCParser.StmtContext,0)


        def init(self):
            return self.getTypedRuleContext(TyCParser.InitContext,0)


        def condition(self):
            return self.getTypedRuleContext(TyCParser.ConditionContext,0)


        def update(self):
            return self.getTypedRuleContext(TyCParser.UpdateContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_forstmt




    def forstmt(self):
